<resources>
    <string name="app_name">Game World</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="my_bookmark">Bookmark</string>
    <string name="bookmark">Bookmark</string>
    <string name="detail">Detail</string>
    <string name="buy">Buy</string>
    <string name="search">Search</string>
    <string name="setting">Setting</string>
    <string name="point">Point</string>
    <string name="introduce">Introduce</string>
    <string name="screenshots">Screenshots</string>
    <string name="genre">Genre</string>
    <string name="requirement">Requirement</string>
    <string name="moregame">More game</string>
    <string name="minimum">Minimum</string>
    <string name="recommend">Recommened</string>
    <string name="home_to_search">home_to_search</string>
    <string name="home_to_detail">home_to_detail</string>
    <string name="review_count">Review Count</string>
    <string name="suggestion_count">Suggestion Count</string>
    <string name="unbookmark">Unbookmark</string>
</resources>
