<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.fragment.GameDetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_home_height"
        android:fitsSystemWindows="true"
        android:background="@android:color/transparent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/purple"
            android:elevation="0dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/thumbnail_video"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

            <com.google.android.exoplayer2.ui.PlayerView
                app:use_controller="false"
                app:resize_mode="zoom"
                android:visibility="invisible"
                android:id="@+id/player_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/purple_overlay" />


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/normal_margin">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:scaleType="centerCrop"
                    android:id="@+id/thumbnail"
                    android:layout_width="@dimen/size_thumbnail_large"
                    android:layout_height="@dimen/size_thumbnail_large"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/name_game"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/normal_margin"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toRightOf="@id/thumbnail"
                    app:layout_constraintTop_toTopOf="@id/thumbnail" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@id/thumbnail"
                    app:layout_constraintLeft_toRightOf="@id/thumbnail" />

                <com.google.android.material.button.MaterialButton
                    app:icon="@drawable/ic_local_grocery_store_black_24dp"
                    android:id="@+id/buy"
                    style="@style/ButtonBuyGameDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:text="@string/buy"
                    android:textColor="@android:color/white"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/thumbnail" />

                <com.google.android.material.button.MaterialButton
                    style="@style/ButtonBuyGameDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/normal_margin"
                    android:text="Bookmark"
                    android:textColor="@android:color/white"
                    app:icon="@drawable/ic_bookmark_black_24dp"
                    app:layout_constraintRight_toLeftOf="@id/buy"
                    app:layout_constraintTop_toTopOf="@id/buy" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/info_layout"
                android:layout_marginTop="@dimen/normal_margin"
                app:layout_constraintTop_toBottomOf="@id/buy"
                android:weightSum="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_gravity="center"
                        style="@style/WhiteBoldText"
                        android:text="9.6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_gravity="center"
                        style="@style/SubText"
                        android:text="@string/point"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/star_point"
                        android:layout_gravity="center"
                        style="@style/WhiteBoldText"
                        android:text="9.6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_gravity="center"
                        style="@style/SubText"
                        android:text="@string/point"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_gravity="center"
                        style="@style/WhiteBoldText"
                        android:text="9.6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_gravity="center"
                        style="@style/SubText"
                        android:text="@string/point"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_marginTop="@dimen/normal_margin"
                app:layout_constraintTop_toBottomOf="@id/info_layout"
                android:background="@color/gray"
                android:layout_width="match_parent"
                android:layout_height="0.3dp"/>
            <LinearLayout
                android:layout_marginTop="@dimen/normal_margin"
                app:layout_constraintTop_toBottomOf="@id/info_layout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/WhiteBoldText"
                    android:text="@string/introduce"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/desciption"
                    style="@style/SubText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/normal_margin"
                app:layout_constraintTop_toBottomOf="@id/info_layout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/WhiteBoldText"
                    android:text="@string/screenshots"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_screenshot"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/normal_margin"
                app:layout_constraintTop_toBottomOf="@id/info_layout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/WhiteBoldText"
                    android:text="@string/genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_genre"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <View
                android:layout_marginTop="@dimen/normal_margin"
                app:layout_constraintTop_toBottomOf="@id/info_layout"
                android:background="@color/gray"
                android:layout_width="match_parent"
                android:layout_height="0.3dp"/>
            <LinearLayout
                android:layout_marginTop="@dimen/normal_margin"
                app:layout_constraintTop_toBottomOf="@id/info_layout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/WhiteBoldText"
                    android:text="@string/requirement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="@dimen/normal_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <View
                android:layout_marginTop="@dimen/normal_margin"
                app:layout_constraintTop_toBottomOf="@id/info_layout"
                android:background="@color/gray"
                android:layout_width="match_parent"
                android:layout_height="0.3dp"/>
            <LinearLayout
                android:layout_marginTop="@dimen/normal_margin"
                app:layout_constraintTop_toBottomOf="@id/info_layout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/WhiteBoldText"
                    android:text="@string/moregame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="@dimen/normal_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>