<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8000000"
    android:animateLayoutChanges="true"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:visibility="gone"
        android:elevation="10dp"
        android:background="@android:color/white"
        android:id="@+id/loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <com.google.android.material.appbar.AppBarLayout
        style="@style/AppBarLayout"
        android:id="@+id/app_bar_layout"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_home_height"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/blue"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:id="@+id/thumbnail_video"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <com.google.android.exoplayer2.ui.PlayerView
                android:visibility="invisible"
                android:id="@+id/player_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"/>
            <View
                android:background="@drawable/gray_overlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                app:layout_collapseMode="parallax"
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/name_top_game"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/star_point_top_game"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_marginBottom="@dimen/normal_margin"
                    app:layout_constraintBottom_toTopOf="@id/top_game_options_bar"
                    android:id="@+id/star_point_top_game"
                    app:layout_constraintLeft_toLeftOf="@id/name_top_game"
                    app:layout_constraintRight_toRightOf="@id/name_top_game"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:tint="@android:color/white"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_stars_black_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/star_point_top_game_tv"
                        android:textStyle="bold"
                        android:layout_marginLeft="@dimen/normal_margin"
                        android:layout_gravity="center"
                        android:textColor="@android:color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/top_game_options_bar"
                    android:paddingBottom="@dimen/normal_margin"
                    app:layout_constraintLeft_toLeftOf="@id/name_top_game"
                    app:layout_constraintRight_toRightOf="@id/name_top_game"
                    app:layout_constraintTop_toBottomOf="@id/name_top_game"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:background="?android:selectableItemBackgroundBorderless"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/height_top_game_button">
                        <ImageView
                            android:tint="@android:color/white"
                            android:src="@drawable/ic_bookmark_black_24dp"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:textSize="10sp"
                            android:layout_gravity="center"
                            android:text="@string/bookmark"
                            android:textColor="@android:color/white"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <com.google.android.material.button.MaterialButton
                        android:textAllCaps="false"
                        android:id="@+id/buy"
                        android:backgroundTint="@color/colorPrimary"
                        android:text="@string/buy"
                        app:cornerRadius="10dp"
                        android:layout_gravity="top|center_horizontal"
                        android:orientation="vertical"
                        android:layout_width="@dimen/width_top_game_button"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:id="@+id/detail"
                        android:background="?android:selectableItemBackgroundBorderless"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/height_top_game_button">
                        <ImageView
                            android:tint="@android:color/white"
                            android:src="@drawable/ic_info_outline_black_24dp"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:layout_gravity="center"
                            android:text="@string/detail"
                            android:textSize="10sp"
                            android:textColor="@android:color/white"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                style="@style/Toolbar"
                app:menu="@menu/menu_tool_bar"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:overScrollMode="always"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:clipChildren="false"
            android:backgroundTint="@color/blue"
            android:transitionGroup="false"
            android:background="@drawable/corner_bordered"
            tools:listitem="@layout/item_top_game"
            android:id="@+id/list_top_game"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>